<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        android:id="@+id/main_bar"
        layout="@layout/activity_app_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"

        />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignTop="@+id/main_bar"
        android:background="@color/black" />



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="ifContentScrolls"
        android:layout_above="@+id/main_bar"
        >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_toStartOf="@id/above_settings_text"
            android:background="@color/white"
            android:contentDescription="@string/return_to_previous_window"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:src="@drawable/arrow_back_icon_35"
            android:layout_marginEnd="50dp"
            app:tint="@color/dark_blue" />

        <TextView

            android:id="@+id/above_settings_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/application_name"
            android:textAlignment="center"
            android:textColor="@color/dark_blue"
            android:textSize="30sp" />

        <View

            android:id="@+id/view5"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@+id/above_settings_text"
            android:background="@color/dark_blue"

            />


        <LinearLayout
            android:id="@+id/help_layout"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_below="@+id/view5"
            android:orientation="vertical"

            >

            <Button
                android:id="@+id/need_help_button"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:drawableEnd="@drawable/arrow_right_icon"
                android:drawableTint="@color/black"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/need_help"
                android:textAlignment="viewStart"
                android:textSize="20sp"

                />

            <View

                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginEnd="40dp"
                android:background="@color/dark_blue"

                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:drawableEnd="@drawable/arrow_right_icon"
                android:drawableTint="@color/black"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/contact_us"
                android:textAlignment="viewStart"
                android:textSize="20sp" />

            <View

                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginEnd="40dp"
                android:background="@color/dark_blue"

                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:drawableEnd="@drawable/arrow_right_icon"
                android:drawableTint="@color/black"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/about_the_application"
                android:textAlignment="viewStart"
                android:textSize="20sp" />

            <View

                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginEnd="40dp"
                android:background="@color/dark_blue"

                />
            <Button
                android:id="@+id/rate_application_button"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:drawableEnd="@drawable/arrow_right_icon"
                android:drawableTint="@color/black"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/rate_the_application"
                android:textAlignment="viewStart"
                android:textSize="20sp" />

            <View

                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginEnd="40dp"
                android:background="@color/dark_blue"

                />


            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:drawableEnd="@drawable/arrow_right_icon"
                android:drawableTint="@color/black"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/terms_and_conditions"
                android:textAlignment="viewStart"
                android:textSize="20sp" />

            <View

                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginEnd="40dp"
                android:background="@color/dark_blue"

                />


        </LinearLayout>


        <ImageView
            android:id="@+id/app_icon"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_below="@id/help_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:src="@drawable/edit_icon_50"
            android:scaleType="fitCenter"
            android:contentDescription="@string/application_logo" />

        <TextView
            android:id="@+id/version_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/app_icon"
            android:background="@color/white"
            android:drawablePadding="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="20dp"
            android:text="@string/application_name_version_number"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginBottom="20dp"
       />


    </RelativeLayout>

    </ScrollView>

    <TextView
        android:id="@+id/copyright_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/main_bar"
        android:background="@color/white"
        android:drawablePadding="5dp"
        android:paddingStart="10dp"
        android:paddingBottom="10dp"
        android:paddingEnd="20dp"
        android:text="@string/copyright_2020_darabkat_team"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:drawableStartCompat="@drawable/copyright_icon_15" />


</RelativeLayout>
